Adding repository tests, edition of Controllers and UserDto.